@@ -1,3 +1,8 @@
+2009-09-16  Richard Henderson  <rth@redhat.com>
+
+	PR middle-end/41360
+	* cfgbuild.c (find_bb_boundaries): Re-instate 2009-09-02 barrier fix.
+
 2009-09-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* integrate.c (set_block_abstract_flags): Call
